2008-01-08  Thomas Mills HInkle  <tmhinkle@gmail.com>

	* gnome-sudoku/src/lib/gnome_sudoku.py Use add_value_to_ui for all
	callbacks where we restore user values to the grid (whether
	through loading saved game or undo). (Bug #430893)
	* gnome-sudoku/src/lib/gsudoku.py Use add_value_to_ui for all
	callbacks where we restore user values to the grid (whether
	through loading saved game or undo). (Bug #430893)

2007-12-06  Thomas H.P. Andersen  <phomes@gmail.com>

	* gnome-sudoku/src/lib/gnome_sudoku.py:
	* gnome-sudoku/src/lib/game_selector.py:
	* gnome-sudoku/src/lib/timer.py: Make new strings translatable. Patch
        by Didier Vidal. (Bug #502194)

2007-11-21  Thomas Mills HInkle  <thinkle@gnome.org>

	* gnome-sudoku/src/lib/sudoku.py Don't print tracebacks -- just
	warn about invalid lines.
	* gnome-sudoku/src/lib/sudoku_maker.py Ignore invalid lines in
	puzzle files.

2007-11-20  Thomas Mills HInkle  <thinkle@gnome.org>

	* gnome-sudoku/src/lib/simple_debug.py Add walk-through option to step through code.
	* gnome-sudoku/src/lib/gnome_sudoku.py Fix error that made
	status-bar not update after 1st puzzle played.
	* gnome-sudoku/src/lib/game_selector.py Add debug
	statements. Speed up make_new_game_model substantially by calling
	get_puzzles() rather than get_new_puzzle() -- the real solution
	here is to improve the algorithm in get_new_puzzle or eliminate
	it, but this is a quick fix.
	* gnome-sudoku/src/lib/sudoku.py Speed up is_valid_puzzle -- we
	now do a really simple test to make sure we actually have a list
	of 81 integers.

2007-11-08  Thomas H.P. Andersen  <phomes@gmail.com>

	* gnome-sudoku/src/lib/gsudoku.py: Fix calculation of big/small borders.

2007-11-04  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* gnome-sudoku/src/lib/gsudoku.py Fix decimal value in float error.
	
	* gnome-sudoku/src/lib/sudoku_maker.py Allow for empty lines in
	sudoku files.

2007-10-29  Thomas M. Hinkle  <thinkle@cvs.gnome.org>
