@@ -1,0 +1,55 @@
+#! /usr/bin/env python
+# Copyright (c) 2005 Tom Hinkle You may use and distribute this
+# software under the terms of the GNU General Public License, version
+# 2 or later
+
+# Setup bugbuddy to report unhandled exceptions.
+try: 
+  import bugbuddy
+  bugbuddy.install('gnome-sudoku')
+except:
+  #No bugbuddy support
+  pass 
+
+import sys
+installed_mode = True
+
+try:
+    # Import gnome-sudoku from system installation.
+    from gnome_sudoku.gnome_sudoku import start_game
+except ImportError:
+    import sys
+    if "@pyexecdir@" not in sys.path:
+        sys.path.insert(0, "@pyexecdir@")
+
+    try:
+	# Import gnome-sudoku from system installation (with pyexecdir in path).
+        from gnome_sudoku.gnome_sudoku import start_game
+    except ImportError:
+
+      try:
+	  # Import gnome_sudoku module from source distribution.
+          import lib;
+          sys.modules["gnome_sudoku"] = sys.modules["lib"];
+          from gnome_sudoku.gnome_sudoku import start_game
+	  installed_mode = False
+      except ImportError:
+	  # Import of gnome-sudoku failed. Show error message.
+          import gtk
+  	  import os.path
+	  import gettext
+          from gettext import gettext as _
+        
+	  gettext.bindtextdomain('gnome-games', os.path.join('@prefix@', 'share', 'locale'))
+	  gettext.textdomain('gnome-games')
+          title = _("Sudoku incorrectly installed")
+          description = _("""Sudoku is not able to start because required application files are not installed. If you are currently upgrading your system please wait until the upgrade has completed.""")
+          dialog = gtk.MessageDialog(type = gtk.MESSAGE_ERROR, message_format = title)
+          dialog.format_secondary_text(description)
+          dialog.add_button(gtk.STOCK_QUIT, gtk.RESPONSE_CLOSE)
+          dialog.run()
+          sys.exit(0)
+
+sys.modules["gnome_sudoku"].installed_mode = installed_mode
+
+start_game()
