@@ -1,3 +1,12 @@
+2008-01-10  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/glchess.in:
+	* src/glchess.in.in:
+	* src/lib/defaults.py.in: Allow Sudoku to be run from source 
+	distribution, without requiring a full install. To run Sudoku
+	from the source distribution, simply execute:
+	$ python gnome-sudoku/src/gnome-sudoku
+
 2008-01-08  Thomas Mills HInkle  <tmhinkle@gmail.com>
 
 	* gnome-sudoku/src/lib/gnome_sudoku.py Use add_value_to_ui for all
